add 40 react components

--- a/students/umienchuk_oksana/react/40_homework/src/css/_weather.scss
+++ b/students/umienchuk_oksana/react/40_homework/src/css/_weather.scss
@@ -10,6 +10,8 @@
     &__title-wrap {
         margin: 0 auto;
         margin-bottom: 20px;
+        display: flex;
+        align-items: center;
     }
 
     // .weather__title
@@ -17,7 +19,6 @@
     &__title {
         font-weight: 400;
         margin: 0;
-        display: inline-block;
         padding-right: 2px;
     }
 
@@ -33,6 +34,7 @@
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 20px;
+        align-items: center;
     }
 
     // .weather__item
@@ -73,8 +75,6 @@
 
     &__img {
         height: 61px;
-        // float: left;
-        padding-top: 10px;
         width: 48px;
         object-fit: cover;
     }
