edited news block

--- a/students/hridina_anastasiia/42_react_components/src/css/_blog.scss
+++ b/students/hridina_anastasiia/42_react_components/src/css/_blog.scss
@@ -12,27 +12,36 @@
     }
 
     &__item {
-        background-color: $lightpink-color;
+        border: 2px solid $goldsand-color;
+        border-radius: 8px;
         padding: 20px;
-        width: 90%;
-        margin: 0 auto;
+        display: flex;
+        gap: 25px;
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
     }
 
     &__name {
+        font-weight: 600;
         text-transform: uppercase;
-        font-size: 22px;
+        font-size: 20px;
         text-align: center;
         padding-bottom: 15px;
+        line-height: normal;
     }
 
     &__img {
         display: block;
-        width: 100%;
-        padding-bottom: 15px;
+        width: 40%;
+        height: 200px;
+        object-fit: cover;
     }
 
     &__text {
-        font-size: 18px;
+        font-size: $default-font-size;
         line-height: normal;
     }
 }
@@ -40,12 +49,13 @@
 .blog-article {
 
     &__wrapper {
-        background-color: $lightgray-color;
+        background-color: $wheat-color;
         width: 60%;
         padding: 15px;
     }
 
     &__title {
+        font-weight: 600;
         font-size: 36px;
         text-transform: uppercase;
         text-align: center;
