--- a/students/hridina_anastasiia/42_react_components/src/css/_variables.scss
+++ b/students/hridina_anastasiia/42_react_components/src/css/_variables.scss
@@ -3,19 +3,16 @@ $lightgray-color: #D9D9D9;
 $lightpink-color: #F9D7D7;
 $blueviolet-color: #BDCDF6;
 $white-color: #fff;
+$goldsand-color: #EAC28F;
+$wheat-color: #F5DAB8;
 
 $width: 15px;
 
 // fonts
-$default-font-name: 'Open Sans';
+$default-font-name: 'Montserrat';
 $secondary-font-name: 'Open Sans';
-$btn-font-name: 'Open Sans';
+$default-font-size: 18px;
 $fallback: Arial, Helvetica, sans-serif;
-$default-font-size: 16px;
-$default-font-weight: 400;
-$default-font-style: normal;
-$default-line-height: normal;
-$default-letter-spacing: 0.6px;
 $main-font: $default-font-name, $fallback;
 $secondary-font: $secondary-font-name, $fallback;
 $font-path: './fonts/';
