--- a/students/hridina_anastasiia/42_react_components/src/css/styles.scss
+++ b/students/hridina_anastasiia/42_react_components/src/css/styles.scss
@@ -6,3 +6,15 @@
 @import "./global";
 @import './blog';
 @import './news';
+
+.banner {
+    width: 100%;
+    height: 300px;
+    background-color: $lightgray-color;
+    margin-bottom: 15px;
+
+    &__img {
+        width: 100%;
+        height: 300px;
+    }
+}
