--- a/students/umienchuk_oksana/project_second_monticello/src/css/_mixins.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_mixins.scss
@@ -163,3 +163,15 @@
         }
     }
 }
+
+.mobile-only {
+    @include media-m(sm) {
+        display: none !important;
+    }
+}
+
+.desktop-only {
+    @include media(sm) {
+        display: none !important;
+    }
+}
