--- a/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
@@ -103,7 +103,7 @@
         font-size: 18px;
         font-weight: 400;
         text-transform: uppercase;
-        // white-space: nowrap;
+        white-space: nowrap;
     }
 
     // .news-card__author-data
@@ -189,7 +189,6 @@
     transform: rotate(-90deg);
     background-repeat: no-repeat;
     background-position: center;
-
 }
 
 /* Стрелка не активная */
