--- a/students/umienchuk_oksana/project_second_monticello/src/css/_variables.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_variables.scss
@@ -7,13 +7,13 @@ $color-black: #000;
 
 $main-color-text: $color-night-blue;
 $second-color-text: $color-white;
-
+$default-bg-color-menu-open: $color-white;
 
 $img-bg-first: #55B7FF;
 $img-bg-second: #7E5AFF;
 
 $default-border: 1px solid $color-night-blue;
-
+$default-border-menu-btn: 2px solid $color-white;
 $font-size-h1: 80px;
 
 $font-weight: 400;
