--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -2,15 +2,15 @@
 @import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
 @import "../../node_modules/slick-carousel/slick/slick.css";
 @import "../../node_modules/slick-carousel/slick/slick-theme.css";
-@import "../../node_modules/lightbox2/src/css/lightbox.css";
 @import "./variables";
 @import "./extend";
 @import "./mixins";
 @import "./reset";
+@import "./lightbox";
 @import "./global";
 @import "./btn";
 @import "./hero";
-@import "./menu";
+@import "./header";
 @import "./projects";
 @import "./news";
 @import "./gallery";
