--- a/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
@@ -34,10 +34,6 @@
         grid-row-gap: 10px;
         margin-bottom: 60px;
 
-        @include media(md) {
-            grid-template-columns: repeat(3, 1fr);
-        }
-
         @include media(sm) {
             grid-template-columns: repeat(2, 1fr);
         }
@@ -52,37 +48,45 @@
         height: 100%;
         object-fit: cover;
 
+
+
         @include media(xs) {
             margin: 5px 0;
         }
     }
 
-    // // .gallery__grid-item
+    // .gallery__grid-item
+    // .gallery__grid-item--open
 
-    &__grid-item {}
+    &__grid-item {
 
-    // .gallery__link
+        //     &--open {
+        //         display: none;
+        //     }
+        // }
 
-    &__link {}
+        // .gallery__link
 
-    // .gallery__img-wrap
 
-    &__img-wrap {}
-}
 
-.grid-img-wrap {
+        // .gallery__img-wrap
 
-    &:nth-child(1) {
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 3;
+        &__img-wrap {}
+    }
+
+    &__link {
+        &:nth-child(1) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 3;
+        }
     }
 }
 
-.gallery-open {
-    // display: none;
-}
+.grid-img-wrap {}
+
+.gallery-open {}
 
 .grid-img-wrap {}
 
@@ -90,4 +94,8 @@
 
 .gallery-btn {
     text-align: center;
+}
+
+.gallery__grid-item--open {
+    display: none;
 }
