--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_gallery.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_gallery.scss
@@ -33,6 +33,12 @@
 .galery-item {
     position: relative;
 
+    &__link {
+        // display: block;
+        width: 100%;
+        height: 100%;
+    }
+
     &__img {
         width: 100%;
         height: 100%;
