--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -20,6 +20,40 @@
         z-index: 0;
     }
 
+    height: 100%;
+
+
+
+    &__item {
+        position: relative;
+        height: 100vh;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+
+        &:nth-child(n+2) {
+            display: none;
+        }
+
+        .slick-initialized & {
+            &:nth-child(n+2) {
+                display: block;
+            }
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+            z-index: 2;
+        }
+    }
+
     @include media(sm) {
         padding: 40px 0;
     }
@@ -44,17 +78,79 @@
         }
     }
 
-    // &__item {
-    //     max-width: 370px;
-    //     max-height: 514px;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: $color-white;
-    //     padding: 15px;
-    // }
+
 }
 
 .news-slider {
+    width: calc(100% - 100px);
+    margin: 0 auto;
+
+    .slick-active {
+        background: none;
+    }
+
+    .slick-prev:before {
+        background: url("../../images/arrow-left-circle.svg");
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+    }
+
+    .slick-next:before {
+        background: url("../../images/arrow-right-circle.svg");
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+    }
+
+    // .slick-arrow {
+    //     background-color: red;
+    // }
+
+    .slick-dots {
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        position: absolute;
+        bottom: -50px;
+        gap: 15px;
+
+        li {
+            height: 10px;
+            width: 10px;
+            list-style: none;
+            margin: 20px 0;
+            border-radius: 50%;
+
+            button {
+                font-size: 0;
+                height: 10px;
+                width: 10px;
+                border-radius: 50%;
+                border: 1px solid $color-white;
+                border-color: $color-white;
+                background-color: transparent;
+                padding: 0;
+
+                &:before {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    content: none;
+                    width: 20px;
+                    height: 20px;
+                    font-family: "slick";
+                    font-size: 6px;
+                    line-height: 20px;
+                    text-align: center;
+                    color: transparent;
+                    opacity: 0;
+                    -webkit-font-smoothing: antialiased;
+                }
+            }
+        }
+    }
+
     &:not(.slick-initialized) {
         display: flex;
 
@@ -70,7 +166,18 @@
 
     &__item {
         padding: 15px;
+        height: 100%;
+
+
+        //     max-width: 370px;
+        // max-height: 550px;
+        //     width: 100%;
+        // height: 100%;
+        //     background-color: $color-white;
+        //     padding: 15px;
+
     }
+
 }
 
 .news {
@@ -83,7 +190,7 @@
         overflow: hidden;
     }
 
-    &__deskription {
+    &__description {
         padding: 30px 15px;
     }
 
@@ -92,6 +199,8 @@
         font-size: 22px;
         font-weight: 700;
         margin-bottom: 15px;
+        // max-height: 55px;
+        // height: 100%;
     }
 
     &__text {
