--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/style.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/style.scss
@@ -6,6 +6,7 @@
 @import "./variables";
 @import "./extend";
 @import "./mixins";
+@import "./lightbox";
 @import "./fonts";
 @import "./reset";
 @import "./global";
