--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -77,8 +77,6 @@
             transform: translate(-50%, -50%);
         }
     }
-
-
 }
 
 .news-slider {
@@ -89,23 +87,59 @@
         background: none;
     }
 
-    .slick-prev:before {
-        background: url("../../images/arrow-left-circle.svg");
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-    }
-
-    .slick-next:before {
-        background: url("../../images/arrow-right-circle.svg");
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-    }
-
-    // .slick-arrow {
-    //     background-color: red;
+    // .slick-prev:before {
+    //     content: '';
+    //     background-image: url("../../images/arrow-left-circle.svg");
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-repeat: no-repeat;
+    //     width: 100%;
+    //     height: 100%;
+    //     display: inline-block;
     // }
+
+    // .slick-next:before {
+    //     content: '';
+    //     background-image: url("../../images/arrow-right-circle.svg");
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-repeat: no-repeat;
+    //     width: 100%;
+    //     height: 100%;
+    //     display: inline-block;
+    // }
+
+
+
+    .prev-arrow {
+        content: '';
+        background-image: url("../../images/arrow-left-circle.svg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 45px;
+        height: 45px;
+        left: -50px;
+        position: absolute;
+        top: 40%;
+
+    }
+
+    .next-arrow {
+        content: '';
+        background-image: url("../../images/arrow-right-circle.svg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 45px;
+        height: 45px;
+        right: -50px;
+        position: absolute;
+        top: 40%;
+        right: -50px;
+    }
+
+
 
     .slick-dots {
         display: flex;
@@ -184,10 +218,8 @@
     background-color: #fff;
 
     &__img {
-        width: 100%;
-        max-height: 240px;
+        aspect-ratio: 2/1.3;
         object-fit: cover;
-        overflow: hidden;
     }
 
     &__description {
