--- a/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/main/_hero_block.scss
@@ -1,13 +1,38 @@
-.header {
-    padding: 35px 15px;
-
-    &.bg-header {
-        background-color: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
-    }
-}
-
 .hero {
     height: 100vh;
+    position: relative;
+
+    .arrow__down {
+        content: '';
+        display: block;
+        border-right: 2px solid $white-color;
+        border-bottom: 2px solid $white-color;
+        width: 10px;
+        height: 10px;
+        transform: rotate(45deg);
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        cursor: pointer;
+
+        &:hover::after {
+            background-color: $white-color;
+            opacity: .3;
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            border: 1px solid $white-color;
+            border-radius: 50%;
+            padding: 30px;
+            position: absolute;
+            top: 75%;
+            left: 75%;
+            transform: translate(-50%, -50%);
+            transition: all .3s ease-in-out;
+        }
+    }
 }
 
 .slick-vertical .slick-slide {
@@ -32,13 +57,20 @@
             right: -50px;
         }
 
+        @include media(md) {
+            right: -58px;
+        }
+
         @include media(xs) {
             visibility: hidden;
         }
 
+        .slick-active button::before {
+            background-color: $white-color;
+        }
+
         li button::before {
             content: '';
-            background-color: $white-color;
             border: 1px solid $white-color;
             border-radius: 50%;
             transition: background-color .3s ease-in-out;
@@ -69,7 +101,7 @@
             }
         }
 
-        &:first-child::after {
+        &::after {
             content: '';
             display: block;
             position: absolute;
@@ -118,37 +150,7 @@
             color: $white-color;
             text-align: center;
         }
+
     }
 
-    .arrow__down {
-        content: '';
-        display: block;
-        border-right: 2px solid $white-color;
-        border-bottom: 2px solid $white-color;
-        width: 10px;
-        height: 10px;
-        transform: rotate(45deg);
-        position: absolute;
-        bottom: 15%;
-        left: 50%;
-        cursor: pointer;
-
-        &:hover::after {
-            background-color: $white-color;
-            opacity: .3;
-        }
-
-        &::after {
-            content: '';
-            display: block;
-            border: 1px solid $white-color;
-            border-radius: 50%;
-            padding: 30px;
-            position: absolute;
-            top: 75%;
-            left: 75%;
-            transform: translate(-50%, -50%);
-            transition: all .3s ease-in-out;
-        }
-    }
 }
