--- a/students/hridina_anastasiia/exam_project_2/src/css/style.scss
+++ b/students/hridina_anastasiia/exam_project_2/src/css/style.scss
@@ -5,6 +5,7 @@
 @import "./variables";
 @import "./extend";
 @import "./mixins";
+@import './lightbox';
 @import './fonts';
 @import './reset';
 @import "./global";
@@ -16,3 +17,23 @@
 @import './main/gallery';
 @import './main/googlemap';
 @import './footer/footer';
+
+
+
+.top__circle {
+    display: block;
+    fill: transparent;
+    stroke: $malibu-color;
+    stroke-width: 10px;
+    position: fixed;
+    right: 45px;
+    bottom: 45px;
+    width: 45px;
+    height: 45px;
+    box-shadow: 0px 0px 17px -6px rgba(0, 0, 0, 0.74);
+    border-radius: 50%;
+}
+
+.two {
+    display: none;
+}
