--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/header/_menu.scss
@@ -7,7 +7,7 @@
     padding: 20px 15px;
 
     &.bg-header {
-        background-color: rgba($color-steel-blue, $alpha: 0.8);
+        background-color: rgba($color-steel-blue, $alpha: 0.9);
         transition: background-color 0.5s ease-in-out;
     }
 }
@@ -63,7 +63,6 @@
         @include media(sm) {
             padding: 15px;
         }
-
     }
 
     &__item-link {
@@ -77,7 +76,7 @@
             content: url(../../images/ellipse-3.svg);
             padding-right: 5px;
 
-            @include media(md) {
+            @include media(lg) {
                 display: none;
             }
         }
@@ -91,8 +90,6 @@
                 content: url(../../images/ellipse-4.svg);
             }
         }
-
-
     }
 }
 
