--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -23,7 +23,7 @@
     background-color: $color-white;
     z-index: 10;
 
-    &::before {
+    &::after {
         content: "";
         background: url('../../images/painted-city.png') no-repeat bottom;
         background-size: contain;
@@ -33,6 +33,7 @@
         left: 0;
         width: 100%;
         height: 100%;
+        pointer-events: none;
     }
 
     &__title {
@@ -88,7 +89,7 @@
 
 .form {
     &>input {
-        width: calc(100% - 20px);
+        width: 100%;
         color: $color-black;
         font-family: Montserrat, $fallback;
         font-size: 18px;
@@ -97,7 +98,7 @@
         line-height: 27px;
         border: none;
         border-bottom: 1px solid $color-steel-blue;
-        padding: 10px 0;
+        padding: 10px 5px;
         margin-bottom: 30px;
         background: transparent;
     }
@@ -106,8 +107,6 @@
 .form-btn {
     width: 140px;
     height: 50px;
-    // right: 0;
-
     color: $color-black;
     text-transform: uppercase;
     background: transparent;
