--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -20,10 +20,6 @@
         z-index: 0;
     }
 
-    height: 100%;
-
-
-
     &__item {
         position: relative;
         height: 100vh;
@@ -83,63 +79,33 @@
     width: calc(100% - 100px);
     margin: 0 auto;
 
-    .slick-active {
+    & .slick-slide {
         background: none;
     }
 
-    // .slick-prev:before {
-    //     content: '';
-    //     background-image: url("../../images/arrow-left-circle.svg");
-    //     background-size: cover;
-    //     background-position: center;
-    //     background-repeat: no-repeat;
-    //     width: 100%;
-    //     height: 100%;
-    //     display: inline-block;
-    // }
+    & .slick-dots .slick-active {
+        background-color: $color-white;
+    }
 
-    // .slick-next:before {
-    //     content: '';
-    //     background-image: url("../../images/arrow-right-circle.svg");
-    //     background-size: cover;
-    //     background-position: center;
-    //     background-repeat: no-repeat;
-    //     width: 100%;
-    //     height: 100%;
-    //     display: inline-block;
-    // }
-
-
+    .slider-arrow {
+        width: 40px;
+        height: 40px;
+        top: 45%;
+        position: absolute;
+        border-radius: 50%;
+        border: 1px solid $color-white;
+        background-color: transparent;
+    }
 
     .prev-arrow {
-        content: '';
-        background-image: url("../../images/arrow-left-circle.svg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 45px;
-        height: 45px;
         left: -50px;
-        position: absolute;
-        top: 40%;
-
+        rotate: 90deg;
     }
 
     .next-arrow {
-        content: '';
-        background-image: url("../../images/arrow-right-circle.svg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 45px;
-        height: 45px;
         right: -50px;
-        position: absolute;
-        top: 40%;
-        right: -50px;
+        rotate: -90deg;
     }
-
-
 
     .slick-dots {
         display: flex;
@@ -201,15 +167,6 @@
     &__item {
         padding: 15px;
         height: 100%;
-
-
-        //     max-width: 370px;
-        // max-height: 550px;
-        //     width: 100%;
-        // height: 100%;
-        //     background-color: $color-white;
-        //     padding: 15px;
-
     }
 
 }
@@ -227,15 +184,15 @@
     }
 
     &__title {
+        @include ellipsis(2);
         color: #2C4058;
         font-size: 22px;
         font-weight: 700;
         margin-bottom: 15px;
-        // max-height: 55px;
-        // height: 100%;
     }
 
     &__text {
+        @include ellipsis(2);
         margin-bottom: 40px;
     }
 
@@ -247,6 +204,7 @@
 .news-author {
     display: flex;
     align-items: center;
+    height: 70px;
 
     &__img {
         border-radius: 50%;
@@ -258,7 +216,7 @@
 
     &__info {
         width: calc(100% - 60px);
-        padding: 5px 5px 5px 20px;
+        padding-left: 20px;
     }
 
     &__name {
