--- a/students/tiselko_iryna/exam_js-module/src/css/_variables.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_variables.scss
@@ -3,11 +3,10 @@ $pickled-bluewood: #2C4058;
 $havelock-blue:#3C7FD4;
 $turquoise:#24CCFA;
 $malibu:#55B7FF;
-$heliotrope: #7E5AFF;
+$heliotrope: rgb(126, 90, 255);
 $white-color: #fff;
 $black-color: #000;
-$hero-gradient: linear-gradient(243deg, rgb(126, 90, 255, .9) 16.9%, rgb(85, 183, 255, .9) 83.27%);
-
+$hero-gradient: linear-gradient(243deg, rgba(126, 90, 255, 0.902) 16.9%, rgb(85, 183, 255, .9) 83.27%);
 $facebook-color:#3b5998;
 $instagram-base: #bc2a8d;
 $instagram-color: rgb(233, 89, 80);
