--- a/students/tiselko_iryna/exam_js-module/src/css/header/_header.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_header.scss
@@ -3,14 +3,22 @@
 
 
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+
+    &.bg-header {
+        background-image: linear-gradient(45deg, #55b7ff 0%, #7e5aff 100%);
+        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    }
+
     // .header__container
 
     &__container {
-        background: linear-gradient(45deg, #55b7ff 0%, #7e5aff 100%);
-        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
 
         @include media () {
-            margin-top: 15px;
         }
     }
 
@@ -24,6 +32,4 @@
 
 }
 
-.bg-header {
-    background-color: $hero-gradient;
-}
+
