--- a/students/umienchuk_oksana/project_second_monticello/src/css/_social.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_social.scss
@@ -4,10 +4,17 @@
     list-style: none;
     display: flex;
     gap: $social-gap;
-    justify-content: flex-end;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    align-items: center;
 
     &__left {
         justify-content: flex-end;
+    }
+
+    @include media(md) {
+        gap: $social-gap-small;
     }
 }
 
@@ -28,4 +35,9 @@
 .icon-img {
     height: 40px;
     width: 40px;
+
+    @include media(md) {
+        height: 30px;
+        width: 30px;
+    }
 }
