--- a/students/umienchuk_oksana/project_second_monticello/src/css/_projects.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_projects.scss
@@ -19,11 +19,11 @@
             height: 1px;
             width: 100px;
             background-color: $color-night-blue;
-            top: -20px;
+            top: -30px;
             left: 50%;
             right: 50%;
             transform: translate(-50%, -50%);
-            z-index: 100;
+            z-index: 50;
         }
     }
 
@@ -32,6 +32,7 @@
     &__block {
         display: flex;
         margin-bottom: 150px;
+        align-items: flex-end;
     }
 
     // .project__block-img
@@ -54,6 +55,10 @@
     // .project__block-text
 
     &__block-text {}
+
+    &__btn {
+        margin-bottom: 60px;
+    }
 }
 
 .one {}
@@ -80,6 +85,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        margin: 0;
     }
 
     // .block__title
@@ -92,6 +98,7 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        margin-bottom: 19px;
     }
 
     // .block__desc
@@ -104,6 +111,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: 30px;
+        margin-bottom: 40px;
     }
 
     // .block__find-map
@@ -116,12 +124,14 @@
         font-style: italic;
         font-weight: 400;
         line-height: normal;
+        margin: 0;
     }
 
     // .block__find-link
 
     &__find-link {
         display: flex;
+        margin-bottom: 15px;
     }
 
 }
