--- a/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
@@ -147,6 +147,14 @@
 
 .news-slider {
     position: relative;
+
+    .slick-slide {
+
+        >div,
+        >div>.news-card {
+            height: 100%;
+        }
+    }
 }
 
 /* Слайдер */
